--- a/admin-panel/pages/manage-themes/content.phtml
+++ b/admin-panel/pages/manage-themes/content.phtml
@@ -94,9 +94,8 @@
                             </div>
                             <div>
                                 <h5 class="card-title mb-3 themeName">Wonderful - Welcome Pages</h5>
-                                <div class="active"><a
-                                        href="https://codecanyon.net/item/wonderful-the-ultimate-welcome-page-themes-for-wowonder/36355367"
-                                        class="btn btn-primary" target="_blank">Get Theme</a></div>
+                                <div class="active"><a href="https://thrilldigitals.com" class="btn btn-primary"
+                                        target="_blank">Get Theme</a></div>
                                 <div class="clearfix"></div>
                             </div>
                         </div>
